--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,12 @@
 name: Deploy to Vercel
 run-name: Deploy to ${{ inputs.deploy_target }} by @${{ github.actor }}
+
 on:
   release:
     types: [published]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: curl -X POST -d {} https://api.vercel.com/v1/integrations/deploy/prj_EE0rPgGL75qF8C61YNeU0t78M8i2/RbWHoBk9IR
+      - run: curl -X POST -d {} ${{ secrets.VERCEL_DEPLOY_HOOK_API }}
