fix compile error & use yarn

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-beta.2",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "start:dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
