--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^0.1.11",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "gsap": "^3.11.4",
