--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start:dev": "next dev",
     "build": "next build",
-    "build:cf" : "npx @cloudflare/next-on-pages --experimental-minify",
+    "build:static" : "next build && next export",
+    "build:edge" : "npx @cloudflare/next-on-pages --experimental-minify",
     "start": "next start",
     "lint": "next lint"
   },
