--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start:dev": "next dev",
     "build": "next build",
-    "build:static" : "next build && next export",
-    "build:edge" : "npx @cloudflare/next-on-pages --experimental-minify",
+    "build:static": "next build && next export",
+    "build:edge": "npx @cloudflare/next-on-pages --experimental-minify",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,8 +15,8 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "bootstrap": "^5.2.3",
-    "buffer": "^6.0.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "gsap": "^3.11.4",
