--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "rss-to-json": "^2.1.1",
     "styled-components": "^5.3.6",
     "typescript": "4.9.5"
