--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-    "git": {
-      "deploymentEnabled": {
-        "main": false
-      }
+  "git": {
+    "deploymentEnabled": {
+      "main": true
     }
   }
-  
+}
