--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "portfolio-website-v2",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "build:static": "next build && next export",
-    "build:edge": "npx @cloudflare/next-on-pages",
+    "build:edge": "next-on-pages",
+    "start:edge": "wrangler pages dev .vercel/output/static --compatibility-flag=nodejs_compat --port=4000",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
     "gsap": "^3.11.4",
-    "next": "13.2.1",
+    "next": "^13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "^18.2.0",
@@ -22,6 +23,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.6.0",
     "@popperjs/core": "^2.11.6",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
@@ -29,7 +31,9 @@
     "@types/styled-components": "^5.1.26",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vercel": "^32.2.0",
+    "wrangler": "^3.7.0"
   },
   "resolutions": {
     "styled-components": "^5"
