tryout new font

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.0.0",
     "bootstrap": "^5.2.3",
     "gsap": "^3.11.4",
     "next": "^13.4.0",
