--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-is": "^18.2.0",
     "react-loading-skeleton": "^3.3.1",
     "rss-to-json": "^2.1.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "5.3.6"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.6.0",
@@ -28,7 +28,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
-    "@types/styled-components": "^5.1.26",
+    "@types/styled-components": "5.1.26",
     "eslint": "8.34.0",
     "eslint-config-next": "13.2.1",
     "typescript": "4.9.5",
